--- a/app/design/frontend/Rafael/m2-theme/web/css/source/footer.less
+++ b/app/design/frontend/Rafael/m2-theme/web/css/source/footer.less
@@ -1,3 +1,16 @@
 .page-footer{
     background: #505443;
+   
+    img.logo-footer {
+        width: 400px;
+    }
+    .row {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    label {
+        color: #FFFFFF;
+        font-size: 16px;
+    }
 }
