styles home productslider

--- a/app/design/frontend/Rafael/m2-theme/web/css/source/home.less
+++ b/app/design/frontend/Rafael/m2-theme/web/css/source/home.less
@@ -1,18 +1,22 @@
-.sections.nav-sections {
-    margin: 0px;
-}
-
-// product-slider
-.mp-product-slider-block.block.widget.block-products-list.grid {
-    display: flex;
-    justify-content: center;
-}
-h2.mp-product-slider-title {
-    font-size: 45px;
-    color: #505443;
-    font-weight: 400;
-    border-top: 4px solid #c49164;
-    border-bottom: 4px solid #c49164;
-    width: 100%;
-    padding: 1%;
+.cms-home{
+    .sections.nav-sections {
+        margin: 0px;
+    }
+    // product-slider
+    .mp-product-slider-block.block.widget.block-products-list.grid {
+        display: flex;
+        justify-content: center;
+    }
+    h2.mp-product-slider-title {
+        font-size: 45px;
+        color: #505443;
+        font-weight: 400;
+        border-top: 4px solid #c49164;
+        border-bottom: 4px solid #c49164;
+        width: 100%;
+        padding: 1%;
+    }
+    .block-content.mp-product-slider-content {
+        padding-left: 2.25%;
+    }
 }
