--- a/app/design/frontend/Rafael/m2-theme/Magento_Theme/templates/html/custom-footer.phtml
+++ b/app/design/frontend/Rafael/m2-theme/Magento_Theme/templates/html/custom-footer.phtml
@@ -11,13 +11,25 @@ $baseUrl = $baseUrl[0];
             </a>
         </div>
         <div class="footer-col">
+            <label class="titulo">Contato</label>
             <label href="#">(48) 99940-4105</label>
         </div>
         <div class="footer-col">
+            <label class="titulo">Email</label>
             <label href="#">juliasantinon@gmail.com</label>
         </div>
         <div class="footer-col">
-            <label href="#">Rua Manoel Álvaro de Araújo, 18<br>Garopaba - SC</label>
+            <label class="titulo">Endereço</label>
+            <label href="#">Rua Manoel Álvaro de Araújo, 18, Garopaba - SC</label>
         </div>
     </div>
 </footer>
+
+<style>
+label.titulo {
+    color: #c49164;
+}
+.footer-col{
+    display: grid;
+}
+</style>
