alterando numero e email no footer

--- a/app/design/frontend/Rafael/m2-theme/Magento_Theme/templates/html/custom-footer.phtml
+++ b/app/design/frontend/Rafael/m2-theme/Magento_Theme/templates/html/custom-footer.phtml
@@ -12,11 +12,11 @@ $baseUrl = $baseUrl[0];
         </div>
         <div class="footer-col">
             <label class="titulo">Contato</label>
-            <label href="#">(48) 99940-4105</label>
+            <label href="#">(48) 99614-9358</label>
         </div>
         <div class="footer-col">
             <label class="titulo">Email</label>
-            <label href="#">juliasantinon@gmail.com</label>
+            <label href="#">santinoncorretora@gmail.com</label>
         </div>
         <div class="footer-col">
             <label class="titulo">Endereço</label>
