styles pra esconder subcategoria no menu

--- a/app/design/frontend/Rafael/m2-theme/Magento_Theme/templates/html/topmenu.phtml
+++ b/app/design/frontend/Rafael/m2-theme/Magento_Theme/templates/html/topmenu.phtml
@@ -105,4 +105,14 @@ nav.navigation, .section-items.nav-sections-items {
 .ui-menu.ui-widget li:hover {
     background: #e5bb88;
 } 
+
+
+/* --------------- SUBCATEGORIAS MENU */
+.submenu.ui-menu.ui-widget {
+    display: none !important;
+}
+span.ui-menu-icon.ui-icon.ui-icon-carat-1-e {
+    display: none !important;
+}
+
 </style>
