adicionando campos novos nos templates do form e styles, pagina de resultado da busca

--- a/app/code/Rafael/Imovelideal/view/frontend/templates/imovelideal.phtml
+++ b/app/code/Rafael/Imovelideal/view/frontend/templates/imovelideal.phtml
@@ -13,16 +13,16 @@
                                 <div class="field negocio required">
                                     <label for="negocio">Que tipo de negócio você busca ?</label>
                                     <select name="negocio" id="negocio">
-                                        <option value="aluguel">Aluguel</option>
-                                        <option value="compra">Compra</option>
+                                        <option value="locações">Aluguel</option>
+                                        <option value="vendas">Compra</option>
                                     </select>
                                 </div>
                                 <div class="field tipo required">
                                     <label for="tipo">Que tipo de imóvel você procura ?</label>
                                     <select name="tipo" id="tipo">
-                                        <option value="apartamento">Apartamento</option>
-                                        <option value="casa">Casa</option>
-                                        <option value="sobrado">Sobrado</option>
+                                        <option value="apartamentos">Apartamento</option>
+                                        <option value="casas">Casa</option>
+                                        <option value="sobrados">Sobrado</option>
                                     </select>
                                 </div>
                                 <div class="field preco required">
@@ -46,6 +46,12 @@
                                         <option value="centro">Centro</option>
                                         <option value="pinguirito">Pinguirito</option>
                                         <option value="panoramico">Panorâmico</option>
+										<option value="silveira">Silveira</option>
+										<option value="palhocinha">Palhocinha</option>
+										<option value="ferrugem">Ferrugem</option>
+										<option value="ambrosio">Ambrosio</option>
+										<option value="morrinhos">Morrinhos</option>
+										<option value="serraria">Serraria</option>
                                     </select>
                                 </div>
                             </div>
