ajuste resultado busca e formulario

--- a/app/code/Rafael/Imovelideal/view/frontend/templates/imovelideal.phtml
+++ b/app/code/Rafael/Imovelideal/view/frontend/templates/imovelideal.phtml
@@ -52,6 +52,7 @@
 										<option value="ambrosio">Ambrosio</option>
 										<option value="morrinhos">Morrinhos</option>
 										<option value="serraria">Serraria</option>
+										<option value="siriu">Siriú</option>
                                     </select>
                                 </div>
                             </div>
@@ -90,7 +91,7 @@
                                             <label for="patio1">Sim</label><br>
                                         </div>
                                         <div class="container-radio-option">
-                                            <input type="radio" id="patio2" name="patio" value="nao" required>
+                                            <input type="radio" id="patio2" name="patio" value="não" required>
                                             <label for="patio2">Não</label>
                                         </div>
                                         <div class="container-radio-option">
@@ -107,7 +108,7 @@
                                     <div class="pet-options required">
                                         <input type="radio" id="pet1" name="pet" value="sim" required>
                                         <label for="pet1">Sim</label><br>
-                                        <input type="radio" id="pet2" name="pet" value="nao" required>
+                                        <input type="radio" id="pet2" name="pet" value="não" required>
                                         <label for="pet2">Não</label>
                                     </div>
                                 </div>
