--- a/app/code/Rafael/Imovelideal/view/frontend/layout/imovelideal_index_resultadobusca.xml
+++ b/app/code/Rafael/Imovelideal/view/frontend/layout/imovelideal_index_resultadobusca.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Rafael\Imovelideal\Block\Resultadobusca" name="rafael_imovelideal" template="resultadobusca.phtml"></block>
+            <block class="Rafael\Imovelideal\Block\Resultadobusca" name="rafael_imovelideal" template="resultadobusca.phtml" cacheable="false"></block>
         </referenceContainer>
     </body>
 </page>
