--- a/app/code/Rafael/Imovelideal/view/frontend/templates/resultadobusca.phtml
+++ b/app/code/Rafael/Imovelideal/view/frontend/templates/resultadobusca.phtml
@@ -13,7 +13,12 @@
 $lista_prod = $this->getImoveisSelecionados($email); 
 $is_first=true;
 $lista_sku="";
+$flag_sem_imovel = false;
 foreach($lista_prod as $item){
+    if(intval($item['id_imovel']) == 0){
+        $flag_sem_imovel = true;
+        break;
+    }
     $_product = $this->getProductById(intval($item['id_imovel']));
     if($is_first){
         $lista_sku .= $_product->getSku();
@@ -23,12 +28,15 @@ foreach($lista_prod as $item){
     }
 }
 
-$productsBlock = $this->getLayout()->createBlock(\Magento\CatalogWidget\Block\Product\ProductsList::class);
-$productsBlock->setProductsCount(count($lista_prod));
-$productsBlock->setTemplate("product/widget/content/grid.phtml");
-$productsBlock->setConditionsEncoded("^[`1`:^[`type`:`Magento||CatalogWidget||Model||Rule||Condition||Combine`,`aggregator`:`all`,`value`:`1`,`new_child`:``^],`1--1`:^[`type`:`Magento||CatalogWidget||Model||Rule||Condition||Product`,`attribute`:`sku`,`operator`:`()`,`value`:`".$lista_sku."`^]^]");
-echo $productsBlock->toHtml();
-
+if(!$flag_sem_imovel){
+    $productsBlock = $this->getLayout()->createBlock(\Magento\CatalogWidget\Block\Product\ProductsList::class);
+    $productsBlock->setProductsCount(count($lista_prod));
+    $productsBlock->setTemplate("product/widget/content/grid.phtml");
+    $productsBlock->setConditionsEncoded("^[`1`:^[`type`:`Magento||CatalogWidget||Model||Rule||Condition||Combine`,`aggregator`:`all`,`value`:`1`,`new_child`:``^],`1--1`:^[`type`:`Magento||CatalogWidget||Model||Rule||Condition||Product`,`attribute`:`sku`,`operator`:`()`,`value`:`".$lista_sku."`^]^]");
+    echo $productsBlock->toHtml();
+}else{
+    echo "<h2>Não achamos imóveis adequados para a sua pesquisa.</h2>";
+}
 ?>
 
 <!-- {{widget type="Magento\CatalogWidget\Block\Product\ProductsList"
@@ -36,8 +44,11 @@ echo $productsBlock->toHtml();
     products_count="10"
     template="Magento_CatalogWidget::product/widget/content/grid.phtml"
     conditions_encoded="^[`1`:^[`type`:`Magento||CatalogWidget||Model||Rule||Condition||Combine`,`aggregator`:`all`,`value`:`1`,`new_child`:``^],`1--1`:^[`type`:`Magento||CatalogWidget||Model||Rule||Condition||Product`,`attribute`:`sku`,`operator`:`==`,`value`:`residencial-pedra-branca, sobrado-pinguirito`^]^]"}}
-
  -->
 
-
+<style>
+.product-item-actions {
+    display: none;
+}
+</style>
 
