removendo unset no email do cliente

--- a/app/code/Rafael/Imovelideal/view/frontend/templates/resultadobusca.phtml
+++ b/app/code/Rafael/Imovelideal/view/frontend/templates/resultadobusca.phtml
@@ -3,7 +3,7 @@
         session_start();
     }
     $email = $_SESSION['email'];
-    unset($_SESSION['email']);
+    // unset($_SESSION['email']);
 ?>
 <span style="font-weight: 400;">Página resultado de busca do imóvel ideal</span>
 
