--- a/app/design/frontend/Rafael/m2-theme/Magento_Catalog/templates/product/view/addtocart.phtml
+++ b/app/design/frontend/Rafael/m2-theme/Magento_Catalog/templates/product/view/addtocart.phtml
@@ -16,8 +16,8 @@
             <div class="buttons-contato">
                 <a class="a-contato-whats" href="https://wa.me/5548996149358">
                     <span>
-                        <img src="<?php echo $block->getUrl("pub/media/icons/")?>bolha-de-bate-papo.png"/>
-                        Fala conosco no Whatsapp!
+                        <img src="<?php echo $block->getUrl("pub/media/icons/")?>whatsapp.png"/>
+                        Fale conosco no Whatsapp!
                     </span>
                 </a>
                 <a class="a-contato-numero" href="https://wa.me/5548996149358">
@@ -39,3 +39,38 @@
 </div>
 <?php endif; ?>
 
+<style>
+a.a-contato-whats {
+    padding: 1% 3%;
+    font-size: 20px;
+    border: #505443 2px solid;
+    border-radius: 50px;
+    width: 380px;
+    /* display: flex;
+    justify-content: center; */
+    color: #FFFFFF;
+    background: #25D366;
+}
+a.a-contato-whats:hover {
+    background: lightgreen;
+}
+.buttons-contato {
+    display: grid;
+    justify-items: center;
+}
+a.a-contato-whats span {
+    display: flex;
+    align-items: center;
+}
+a.a-contato-whats img {
+    width: 60px;
+}
+a.a-contato-whats span {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.buttons-contato a {
+    margin-bottom: 2%;
+}
+</style>
