--- a/app/design/frontend/Rafael/m2-theme/web/css/source/footer.less
+++ b/app/design/frontend/Rafael/m2-theme/web/css/source/footer.less
@@ -13,4 +13,11 @@
         color: #FFFFFF;
         font-size: 16px;
     }
+    footer.page-footer{
+        max-width: unset;
+        width: 100%;
+    }
+    .footer.content {
+        max-width: unset;
+    }
 }
