mudança texto button whats pdp

--- a/app/design/frontend/Rafael/m2-theme/Magento_Catalog/templates/product/view/addtocart.phtml
+++ b/app/design/frontend/Rafael/m2-theme/Magento_Catalog/templates/product/view/addtocart.phtml
@@ -17,7 +17,7 @@
                 <a class="a-contato-whats" href="https://wa.me/5548996149358">
                     <span>
                         <img src="<?php echo $block->getUrl("pub/media/icons/")?>whatsapp.png"/>
-                        Fale conosco no Whatsapp!
+                        Fale conosco via WhatsApp!
                     </span>
                 </a>
                 <a class="a-contato-numero" href="https://wa.me/5548996149358">
