--- a/app/design/frontend/Rafael/m2-theme/web/css/source/home.less
+++ b/app/design/frontend/Rafael/m2-theme/web/css/source/home.less
@@ -15,6 +15,7 @@
         border-bottom: 4px solid #c49164;
         width: 100%;
         padding: 1%;
+        margin: 0;
     }
     .block-content.mp-product-slider-content {
         padding-left: 2.25%;
