--- a/app/design/frontend/Rafael/m2-theme/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Rafael/m2-theme/Magento_Catalog/layout/catalog_product_view.xml
@@ -6,8 +6,17 @@
  */
 -->
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <body>
+    <body>    
+        <referenceContainer name="product.info.main">
+            <block class="Magento\Cms\Block\Block" name="contact-us" after="-">
+                <arguments>
+                    <argument name="block_id" xsi:type="string">3</argument>
+                </arguments>
+            </block>
+        </referenceContainer>
+
         <referenceBlock name="product.info.stock.sku" remove="true"/>
         <referenceBlock name="product.info.review" remove="true"/> 
+        <referenceBlock name="reviews.tab" remove="true" />
     </body>
 </page>
